--- a/apps/sync-v2/package.json
+++ b/apps/sync-v2/package.json
@@ -5,19 +5,39 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsup",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/api-logs": "^0.205.0",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.205.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.205.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.205.0",
+    "@opentelemetry/instrumentation-winston": "^0.50.0",
+    "@opentelemetry/resources": "^1.30.1",
+    "@opentelemetry/sdk-logs": "^0.205.0",
+    "@opentelemetry/sdk-metrics": "^2.1.0",
+    "@opentelemetry/sdk-node": "^0.205.0",
+    "@opentelemetry/semantic-conventions": "^1.37.0",
+    "@opentelemetry/winston-transport": "^0.16.0",
+    "bullmq-otel": "^1.0.1",
+    "@ai-sdk/openai": "^2.0.28",
     "@bomberoscr/db": "workspace:*",
     "@bomberoscr/lib": "workspace:*",
     "@bomberoscr/sync-domain": "workspace:*",
     "@sentry/node": "^9.33.0",
+    "ai": "^5.0.40",
     "bullmq": "^5.56.0",
     "dotenv": "^16.6.1",
     "dotenv-expand": "^12.0.2",
     "ioredis": "^5.6.1",
     "neverthrow": "^8.2.0",
     "node-cron": "^3.0.3",
+    "portkey-ai": "^1.10.3",
+    "rss-parser": "^3.13.0",
     "tsx": "^4.20.3",
     "winston": "^3.17.0",
     "zod": "catalog:"
@@ -26,9 +46,12 @@
     "@bomberoscr/typescript-config": "workspace:*",
     "@types/node": "^20.19.1",
     "@types/node-cron": "^3.0.11",
+    "@vitest/ui": "^3.2.4",
+    "jsdom": "^26.1.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "tsup": "^8.5.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vitest": "^3.2.4"
   }
 }
