--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -64,14 +64,14 @@
     "lucide-react": "^0.525.0",
     "maplibre-gl": "^5.6.1",
     "motion": "^12.23.6",
-    "next": "15.6.0-canary.6",
+    "next": "16.0.3",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
     "pg": "^8.16.3",
     "radix-ui": "^1.4.3",
-    "react": "19.1.0",
+    "react": "19.2.0",
     "react-day-picker": "9.8.0",
-    "react-dom": "19.1.0",
+    "react-dom": "19.2.0",
     "react-hook-form": "^7.60.0",
     "react-intersection-observer": "^9.16.0",
     "react-map-gl": "8.0.4",
@@ -88,8 +88,8 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^24.0.15",
     "@types/pg": "^8.15.4",
-    "@types/react": "19.1.8",
-    "@types/react-dom": "19.1.6",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "tsx": "^4.20.3",
@@ -102,8 +102,8 @@
   },
   "pnpm": {
     "overrides": {
-      "@types/react": "19.1.8",
-      "@types/react-dom": "19.1.6"
+      "@types/react": "19.2.7",
+      "@types/react-dom": "19.2.3"
     }
   }
 }
