--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
     "typegen": "next typegen"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.946.0",
     "@base-ui-components/react": "1.0.0-beta.6",
     "@bomberoscr/db": "workspace:*",
     "@bomberoscr/lib": "workspace:*",
