--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -64,6 +64,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.554.0",
+    "mapbox-gl": "^3.17.0",
     "maplibre-gl": "^5.6.1",
     "motion": "^12.23.24",
     "next": "16.0.7",
