--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,3 +1,9 @@
 NODE_ENV=development
 PORT=9999
 LOG_LEVEL=debug
+MAPBOX_API_KEY=
+SITE_URL=
+S3_ENDPOINT=
+S3_KEY_ID=
+S3_SECRET_KEY=
+S3_BUCKET_NAME=
