--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,6 +16,7 @@
     "@hono/node-server": "^1.18.1",
     "@hono/zod-openapi": "^1.0.2",
     "@scalar/hono-api-reference": "^0.9.13",
+    "@aws-sdk/client-s3": "^3.823.0",
     "dotenv": "^17.2.1",
     "dotenv-expand": "^12.0.2",
     "drizzle-orm": "catalog:",
