--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -55,7 +55,7 @@
     "jsdom": "^27.0.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.7.2",
-    "vite": "^7.1.7",
+    "vite": "npm:rolldown-vite@7.3.1",
     "vitest": "^3.0.5",
     "web-vitals": "^5.1.0"
   }
