--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,30 +15,30 @@
     "lint:fix": "oxlint --fix"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.823.0",
+    "@aws-sdk/client-s3": "3.966.0",
     "@bomberoscr/db": "workspace:*",
     "@bomberoscr/sync-domain": "workspace:*",
-    "@hono/node-server": "^1.18.1",
-    "@hono/zod-openapi": "^1.0.2",
-    "@scalar/hono-api-reference": "^0.9.13",
-    "dotenv": "^17.2.1",
-    "dotenv-expand": "^12.0.2",
+    "@hono/node-server": "1.19.8",
+    "@hono/zod-openapi": "1.2.0",
+    "@scalar/hono-api-reference": "0.9.32",
+    "dotenv": "17.2.3",
+    "dotenv-expand": "12.0.3",
     "drizzle-orm": "catalog:",
-    "hono": "^4.9.6",
-    "hono-og": "^0.0.5",
-    "hono-pino": "^0.10.1",
-    "pino": "^9.7.0",
-    "pino-pretty": "^13.1.1",
+    "hono": "4.11.3",
+    "hono-og": "0.0.29",
+    "hono-pino": "0.10.3",
+    "pino": "10.1.1",
+    "pino-pretty": "^13.1.3",
     "stoker": "2.0.1",
     "zod": "catalog:"
   },
   "devDependencies": {
     "@bomberoscr/typescript-config": "workspace:*",
-    "@types/node": "^24.2.0",
-    "cross-env": "^10.0.0",
-    "tsdown": "^0.9.7",
-    "tsx": "^4.19.4",
-    "typescript": "^5.8.3",
-    "vitest": "^3.2.1"
+    "@types/node": "25.0.6",
+    "cross-env": "10.1.0",
+    "tsdown": "0.19.0",
+    "tsx": "4.21.0",
+    "typescript": "5.9.3",
+    "vitest": "4.0.17"
   }
 }
