--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@typescript/native-preview": "7.0.0-dev.20260111.1",
+    "@typescript/native-preview": "^7.0.0-dev.20260112.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
-    "oxfmt": "^0.23.0",
-    "oxlint": "^1.38.0",
-    "turbo": "^2.5.4"
+    "oxfmt": "^0.24.0",
+    "oxlint": "^1.39.0",
+    "turbo": "^2.7.4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,jsonc,css,scss,md,mdx,html,yml,yaml}": "pnpm exec oxfmt"
@@ -26,5 +26,14 @@
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "pnpm@10.6.3"
+  "packageManager": "pnpm@10.6.3",
+  "pnpm": {
+    "packageExtensions": {
+      "hono-og@0.0.29": {
+        "dependencies": {
+          "satori": "0.12.2"
+        }
+      }
+    }
+  }
 }
