--- a/.prettierignore
+++ b/.prettierignore
@@ -2,6 +2,7 @@ apps/web/
 
 apps/frontend/src/routeTree.gen.ts
 apps/frontend/src/lib/api/
+apps/frontend/src/styles.css
 apps/frontend/dist/
 
 apps/api/dist/
