--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -36,6 +36,7 @@
     "nuqs": "^2.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "recharts": "2.15.4",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.0.6",
     "unplugin-fonts": "^1.4.0",
