--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -33,6 +33,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.561.0",
+    "motion": "^12.23.24",
     "nitro": "latest",
     "nuqs": "^2.8.1",
     "react": "^19.2.0",
