--- a/opencode.jsonc
+++ b/opencode.jsonc
@@ -1,5 +1,10 @@
 {
   "$schema": "https://opencode.ai/config.json",
+  "lsp": {
+    "biome": {
+      "disabled": true
+    }
+  },
   "mcp": {
     "postgres": {
       "type": "local",
