--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -7,11 +7,8 @@
     "./schema": "./src/schema.ts",
     "./queries/incidents": "./src/queries/incidents.ts",
     "./queries/stations": "./src/queries/stations.ts",
+    "./queries/stats": "./src/queries/stats.ts",
     "./queries/incidentsTable": "./src/queries/incidentsTable.ts",
-    "./queries/systemOverview": "./src/queries/systemOverview.ts",
-    "./queries/homepage/*": "./src/queries/homepage/*.ts",
-    "./queries/stations/*": "./src/queries/stations/*.ts",
-    "./queries/charts/*": "./src/queries/charts/*.ts",
     "./queries/search/*": "./src/queries/search/*.ts",
     "./queries/map/*": "./src/queries/map/*.ts"
   },
