--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,54 +15,46 @@
     "openapi-ts": "openapi-ts"
   },
   "dependencies": {
-    "@base-ui/react": "^1.0.0",
-    "@faker-js/faker": "^10.0.0",
-    "@phosphor-icons/react": "^2.1.10",
-    "@tailwindcss/vite": "^4.0.6",
-    "@tanstack/match-sorter-utils": "^8.19.4",
-    "@tanstack/react-devtools": "^0.7.0",
-    "@tanstack/react-query": "^5.90.11",
-    "@tanstack/react-query-devtools": "^5.91.2",
-    "@tanstack/react-router": "^1.132.0",
-    "@tanstack/react-router-devtools": "^1.132.0",
-    "@tanstack/react-router-ssr-query": "^1.131.7",
-    "@tanstack/react-start": "^1.132.0",
-    "@tanstack/react-table": "^8.21.2",
-    "@tanstack/router-plugin": "^1.132.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "lucide-react": "^0.561.0",
-    "motion": "^12.23.24",
-    "nitro": "latest",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "recharts": "2.15.4",
-    "spin-delay": "^2.0.1",
-    "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.0.6",
-    "unplugin-fonts": "^1.4.0",
-    "vite-tsconfig-paths": "^6.0.2",
+    "@base-ui/react": "1.1.0",
+    "@phosphor-icons/react": "2.1.10",
+    "@tailwindcss/vite": "4.1.18",
+    "@tanstack/react-devtools": "0.9.4",
+    "@tanstack/react-query": "5.90.20",
+    "@tanstack/react-query-devtools": "5.91.3",
+    "@tanstack/react-router": "1.157.18",
+    "@tanstack/react-router-devtools": "1.157.18",
+    "@tanstack/react-router-ssr-query": "1.157.18",
+    "@tanstack/react-start": "1.157.18",
+    "@tanstack/react-table": "8.21.3",
+    "@tanstack/router-plugin": "1.157.18",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "date-fns": "4.1.0",
+    "lucide-react": "0.563.0",
+    "motion": "12.29.2",
+    "nitro": "3.0.1-alpha.2",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
+    "recharts": "3.7.0",
+    "tailwind-merge": "3.4.0",
+    "tailwindcss": "4.1.18",
+    "vite-tsconfig-paths": "6.0.5",
     "zod": "catalog:"
   },
   "devDependencies": {
-    "@fontsource-variable/bricolage-grotesque": "^5.2.10",
-    "@fontsource-variable/geist": "^5.2.8",
-    "@fontsource-variable/geist-mono": "^5.2.7",
-    "@hey-api/openapi-ts": "0.90.2",
-    "@tanstack/devtools-vite": "^0.3.11",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/react": "^16.2.0",
-    "@types/node": "^22.10.2",
-    "@types/react": "^19.2.0",
-    "@types/react-dom": "^19.2.0",
+    "@fontsource-variable/bricolage-grotesque": "5.2.10",
+    "@fontsource-variable/geist": "5.2.8",
+    "@fontsource-variable/geist-mono": "5.2.7",
+    "@hey-api/openapi-ts": "0.91.1",
+    "@tanstack/devtools-vite": "0.5.0",
+    "@types/node": "25.1.0",
+    "@types/react": "19.2.10",
+    "@types/react-dom": "19.2.3",
     "@typescript/native-preview": "catalog:",
-    "@vitejs/plugin-react": "^5.0.4",
-    "babel-plugin-react-compiler": "^1.0.0",
-    "jsdom": "^27.0.0",
-    "tw-animate-css": "^1.4.0",
+    "@vitejs/plugin-react": "5.1.2",
+    "babel-plugin-react-compiler": "1.0.0",
+    "tw-animate-css": "1.4.0",
     "vite": "npm:rolldown-vite@7.3.1",
-    "vitest": "^3.0.5",
-    "web-vitals": "^5.1.0"
+    "vitest": "4.0.18"
   }
 }
