--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite dev --port 3000",
+    "dev": "vite dev --port 3000 --host 0.0.0.0",
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest run",
@@ -29,11 +29,12 @@
     "@tanstack/router-plugin": "1.157.18",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
-    "date-fns": "4.1.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "0.563.0",
     "motion": "12.29.2",
     "nitro": "3.0.1-alpha.2",
     "react": "19.2.4",
+    "react-day-picker": "^9.13.0",
     "react-dom": "19.2.4",
     "recharts": "3.7.0",
     "tailwind-merge": "3.4.0",
