--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -7,8 +7,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest run",
-    "format": "oxfmt",
-    "format:check": "oxfmt --check",
+    "format": "oxfmt --ignore-path ../../.prettierignore",
+    "format:check": "oxfmt --check --ignore-path ../../.prettierignore",
     "lint": "oxlint --type-aware --tsconfig tsconfig.oxlint.json src",
     "lint:fix": "oxlint --type-aware --tsconfig tsconfig.oxlint.json src --fix",
     "typecheck": "oxlint --type-aware --type-check --tsconfig tsconfig.oxlint.json src",
@@ -20,15 +20,15 @@
     "@number-flow/react": "^0.5.11",
     "@phosphor-icons/react": "2.1.10",
     "@tailwindcss/vite": "4.1.18",
-    "@tanstack/react-devtools": "0.9.4",
+    "@tanstack/react-devtools": "0.9.5",
     "@tanstack/react-query": "5.90.20",
     "@tanstack/react-query-devtools": "5.91.3",
-    "@tanstack/react-router": "1.157.18",
-    "@tanstack/react-router-devtools": "1.157.18",
-    "@tanstack/react-router-ssr-query": "1.157.18",
-    "@tanstack/react-start": "1.157.18",
+    "@tanstack/react-router": "1.159.5",
+    "@tanstack/react-router-devtools": "1.159.5",
+    "@tanstack/react-router-ssr-query": "1.159.5",
+    "@tanstack/react-start": "1.159.5",
     "@tanstack/react-table": "8.21.3",
-    "@tanstack/router-plugin": "1.157.18",
+    "@tanstack/router-plugin": "1.159.5",
     "@visx/group": "^3.12.0",
     "@visx/responsive": "^3.12.0",
     "@visx/shape": "^3.12.0",
