--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "prepare": "husky"
   },
   "devDependencies": {
-    "@typescript/native-preview": "^7.0.0-dev.20260127.1",
+    "@typescript/native-preview": "7.0.0-dev.20260210.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
-    "oxfmt": "^0.28.0",
-    "oxlint": "^1.43.0",
-    "oxlint-tsgolint": "^0.11.5"
+    "oxfmt": "0.31.0",
+    "oxlint": "1.46.0",
+    "oxlint-tsgolint": "0.12.0"
   },
   "overrides": {
     "hono-og@0.0.29": {
@@ -37,5 +37,5 @@
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "bun@1.3.6"
+  "packageManager": "bun@1.3.9"
 }
