--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -7,17 +7,23 @@ COPY . .
 RUN bun install --frozen-lockfile
 RUN bun run --cwd apps/api build
 
+# Strip workspace dependencies from package.json since tsdown bundles them
+RUN cat apps/api/package.json \
+  | sed '/@bomberoscr/d' \
+  > /tmp/package.json
+
 FROM oven/bun:1.3.9-alpine AS runner
 
-WORKDIR /app/apps/api
+WORKDIR /app
 
 ENV NODE_ENV=production
 ENV PORT=9999
 
-COPY --from=build /app/node_modules /app/node_modules
-COPY --from=build /app/apps/api/package.json ./package.json
+COPY --from=build /tmp/package.json ./package.json
 COPY --from=build /app/apps/api/dist ./dist
 COPY --from=build /app/apps/api/public ./public
+
+RUN bun install --production --ignore-scripts
 
 USER bun
 
