--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@base-ui/react": "1.1.0",
-    "@number-flow/react": "^0.5.11",
+    "@number-flow/react": "^0.5.12",
     "@phosphor-icons/react": "2.1.10",
     "@tanstack/react-devtools": "0.9.5",
     "@tanstack/react-query": "5.90.20",
@@ -27,11 +27,17 @@
     "@tanstack/react-router-devtools": "1.159.5",
     "@tanstack/react-router-ssr-query": "1.159.5",
     "@tanstack/react-start": "1.159.5",
+    "@visx/event": "^3.12.0",
+    "@visx/gradient": "^3.12.0",
+    "@visx/grid": "^3.12.0",
     "@visx/group": "^3.12.0",
+    "@visx/pattern": "^3.12.0",
     "@visx/responsive": "^3.12.0",
+    "@visx/scale": "^3.12.0",
     "@visx/shape": "^3.12.0",
     "class-variance-authority": "0.7.1",
     "clsx": "^2.1.1",
+    "d3-array": "^3.2.4",
     "d3-shape": "^3.2.0",
     "date-fns": "^4.1.0",
     "lucide-react": "0.563.0",
@@ -39,8 +45,9 @@
     "react": "19.2.4",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.4",
+    "react-use-measure": "^2.1.7",
     "recharts": "3.7.0",
-    "tailwind-merge": "^3.4.0",
+    "tailwind-merge": "^3.4.1",
     "zod": "^4.0.5"
   },
   "devDependencies": {
